--- a/TESI/WhoPlays/app/src/main/AndroidManifest.xml
+++ b/TESI/WhoPlays/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.whoplays">
 <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -26,7 +27,7 @@
             android:label="SingUp"
             android:theme="@style/AppTheme.NoActionBar">
 
-    </activity>
+        </activity>
         <activity
             android:name=".WhoPlaysActivity"
             android:label="@string/app_name"
@@ -36,10 +37,16 @@
             android:label="@string/menu_filter"
             android:theme="@style/DialogTheme">
         </activity>
-        <activity android:name=".NewAdsActivity"
-            android:label="@string/type_ads_new_event"
-            android:theme="@style/DialogTheme">
+        <activity android:name=".CreateAdsActivity"
+            android:label="@string/player_ads_new_event"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD_Hy1CNMs9jqvJkl_kjcoojaBsqXdxUAI" />
     </application>
 
 </manifest>
