--- a/TESI/WhoPlays/app/src/main/AndroidManifest.xml
+++ b/TESI/WhoPlays/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.whoplays">
-<uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -14,8 +15,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="Who Plays"
-            android:theme="@style/AppTheme.NoActionBar"
-            >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,28 +25,29 @@
         <activity
             android:name=".SignUpActivity"
             android:label="SingUp"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".WhoPlaysActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".FilterActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".FilterActivity"
             android:label="@string/menu_filter"
-            android:theme="@style/DialogTheme">
-        </activity>
-        <activity android:name=".CreateAdsActivity"
+            android:theme="@style/DialogTheme"></activity>
+        <activity
+            android:name=".CreateAdsActivity"
             android:label="@string/player_ads_new_event"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyD_Hy1CNMs9jqvJkl_kjcoojaBsqXdxUAI" />
+            android:value="AIzaSyBzgeE8W_NQl6AdAJ5FDiJY6ua0haQkM1o"
+            />
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
     </application>
 
 </manifest>
