--- a/TESI/WhoPlays/app/build.gradle
+++ b/TESI/WhoPlays/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
+    compile 'com.google.android.gms:play-services-places:11.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
