--- a/TESI/WhoPlays/app/build.gradle
+++ b/TESI/WhoPlays/app/build.gradle
@@ -19,7 +19,6 @@ android {
 }
 
 dependencies {
-    compile 'com.firebase:firebase-client-android:2.5.2+'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
@@ -37,6 +36,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
     compile 'com.google.android.gms:play-services-places:11.8.0'
+    compile 'com.firebaseui:firebase-ui-database:3.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
