--- a/TESI/WhoPlays/app/src/main/AndroidManifest.xml
+++ b/TESI/WhoPlays/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
             android:name=".CreateAdsActivity"
             android:label="@string/player_ads_new_event"
             android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".FindPlayerActivity"
+            android:label="Annuncio"
+            android:theme="@style/AppTheme.NoActionBar" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
