--- a/TESI/WhoPlays/app/build.gradle
+++ b/TESI/WhoPlays/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
     compile 'com.google.android.gms:play-services-places:11.8.0'
     compile 'com.firebaseui:firebase-ui-database:3.1.0'
+    compile 'org.jetbrains:annotations-java5:15.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
