--- a/TESI/WhoPlays/app/build.gradle
+++ b/TESI/WhoPlays/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:11.8.0'
     compile 'com.firebaseui:firebase-ui-database:3.1.0'
     compile 'org.jetbrains:annotations-java5:15.0'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 apply plugin: 'com.google.gms.google-services'
