--- a/TESI/WhoPlays/app/src/main/AndroidManifest.xml
+++ b/TESI/WhoPlays/app/src/main/AndroidManifest.xml
@@ -39,9 +39,16 @@
             android:name=".CreateAdsActivity"
             android:label="@string/player_ads_new_event"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".FindPlayerActivity"
-            android:label="Annuncio"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".FindPlayerActivity"
+            android:label="Anuncio"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <data android:scheme="geo" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
