--- a/TESI/WhoPlays/app/src/main/AndroidManifest.xml
+++ b/TESI/WhoPlays/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:name=".SignUpActivity"
             android:label="SingUp"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
+            android:name=".ModPassActivity"
+            android:label="Modifica Password"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".WhoPlaysActivity"
             android:label="@string/app_name"
