--- a/TESI/WhoPlays/app/src/main/AndroidManifest.xml
+++ b/TESI/WhoPlays/app/src/main/AndroidManifest.xml
@@ -64,6 +64,8 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"/>
+
+        <receiver android:name=".AlarmNotificationReceiver"/>
     </application>
 
 </manifest>
