--- a/TESI/WhoPlays/app/src/main/AndroidManifest.xml
+++ b/TESI/WhoPlays/app/src/main/AndroidManifest.xml
@@ -16,37 +16,49 @@
         <activity
             android:name=".LoginActivity"
             android:label="Who Plays"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".SignUpActivity"
             android:label="SingUp"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
+        />
 
         <activity
             android:name=".ModPassActivity"
             android:label="Modifica Password"
+            android:screenOrientation="portrait"
+
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".WhoPlaysActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".FilterActivity"
             android:label="@string/menu_filter"
-            android:theme="@style/DialogTheme"/>
+            android:theme="@style/DialogTheme"
+            android:screenOrientation="portrait"
+        />
         <activity
             android:name=".CreateAdsActivity"
             android:label="@string/player_ads_new_event"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"
+            />
         <activity
             android:name=".FindPlayerActivity"
             android:label="Anuncio"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -63,7 +75,8 @@
             />
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"/>
+            android:label="@string/title_activity_maps"
+            android:screenOrientation="portrait"/>
         <receiver android:name=".AlarmNotificationReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
