aggiunto delle cagate
ho aggiunto la dialog activity per la scelta l icona del piu e il layout, domani aggiungo anche l'activity per mettere la propria squadra e se riesco modifico anche quella per i giocatori che ti permetta di mettere i tuoi amici

--- a/TESI/WhoPlays/app/src/main/AndroidManifest.xml
+++ b/TESI/WhoPlays/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:label="SingUp"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait"/>
-        />
+
 
         <activity
             android:name=".ModPassActivity"
@@ -46,6 +46,12 @@
         <activity
             android:name=".FilterActivity"
             android:label="@string/menu_filter"
+            android:theme="@style/DialogTheme"
+            android:screenOrientation="portrait"
+        />
+        <activity
+            android:name=".ChoiceTypeMatchActivity"
+            android:label="@string/choice_label"
             android:theme="@style/DialogTheme"
             android:screenOrientation="portrait"
         />
