--- a/TESI/WhoPlays/app/src/main/AndroidManifest.xml
+++ b/TESI/WhoPlays/app/src/main/AndroidManifest.xml
@@ -6,6 +6,12 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:xlargeScreens="true"
+        />
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
